syntax = "proto3";

package filesystem;

option go_package = "./pkg/generated/filesystem;filesystem";

message File {
    string name = 1;
    string path = 2;
    bytes data = 3;
}

message UploadFilesystemResponse {
    string id = 1;
    int64 size = 2;
}

message DownloadRequest {
    string path = 1;
}

message ManifestRequest {
    string path = 1;
    bool recursive = 2;
}

message ManifestResponse {
    repeated string files = 1;
}

service StorageService {
    rpc Upload(stream File) returns (UploadFilesystemResponse);
    rpc Download(DownloadRequest) returns (stream File);
    rpc GetManifest(ManifestRequest) returns (ManifestResponse);
}
